--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>SoftTech-Programmer</title>
 </head>
 <body>
-    hi
-    lady 
-    i am come in Open the door
+   Nusrat <span style="color: rgb(46, 165, 42); font-size: 60px;">Nusrat</span> pagle
 </body>
 </html>
