--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>SoftTech-Programmer</title>
-</head>
-<body>
-   Nusrat <span style="color: rgb(46, 165, 42); font-size: 60px;">Nusrat</span> pagle
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <a href="#" class="logo">Portfolio</a>
+      <nav class="navbar">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Skill</a>
+        <a href="#">Portfolio</a>
+        <a href="#">contact</a>
+      </nav>
+    </header>
+
+    
+  </body>
 </html>
