--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
       </nav>
     </header>
 
-    
+    <section class="home">
+        <div class="home-content">
+            <h3>Hello, it's me</h3>
+            <h1>Alamin Dolar</h1>
+            <h3>And I'm a</h3>
+            <p>I'am a Web Developer with enougph Experience for over than 3years</p>
+            <div class="home-sci">
+
+            </div>
+        </div>
+
+        <div class="image-sectin">
+            <img src="image.png" alt="">
+        </div>
+    </section>
   </body>
 </html>
