1st page done without animation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>SoftTech-Programmer</title>
   </head>
   <body>
@@ -19,19 +20,23 @@
     </header>
 
     <section class="home">
-        <div class="home-content">
-            <h3>Hello, it's me</h3>
-            <h1>Alamin Dolar</h1>
-            <h3>And I'm a</h3>
-            <p>I'am a Web Developer with enougph Experience for over than 3years</p>
-            <div class="home-sci">
-
-            </div>
+      <div class="home-content">
+        <h3>Hello, it's me</h3>
+        <h1>Alamin Dolar</h1>
+        <h3>And I'm a</h3>
+        <p>I'am a Web Developer with extensive experience for over 3 years+</p>
+        <div class="home-sci">
+          <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+          <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+          <a href="#"><i class='bx bxl-github'></i></a>
+          <a href="#"><i class='bx bxl-twitter'></i></a>
         </div>
+        <a href="#" class="btn-box">Hire Me</a>
+      </div>
 
-        <div class="image-sectin">
-            <img src="image.png" alt="">
-        </div>
+      <div class="image-sectin">
+        <img src="image.png" alt="" />
+      </div>
     </section>
   </body>
 </html>
