--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <title>SoftTech-Programmer</title>
   </head>
   <body>
@@ -23,7 +24,7 @@
       <div class="home-content">
         <h3>Hello, it's me</h3>
         <h1>Alamin Dolar</h1>
-        <h3>And I'm a</h3>
+        <h3>And I'm a <span class="text"></span></h3>
         <p>I'am a Web Developer with extensive experience for over 3 years+</p>
         <div class="home-sci">
           <a href="#"><i class='bx bxl-facebook-circle'></i></a>
@@ -38,5 +39,8 @@
         <img src="image.png" alt="" />
       </div>
     </section>
+
+    <!-- Javascript link -->
+    <script src="main.js"></script>
   </body>
 </html>
