about section design done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
       </div>
     </section>
 
+    <!-- About Section start -->
+    <section class="about" id="about">
+      <div class="about-image">
+        <img src="image.png" alt="">
+      </div>
+      <div class="about-text">
+        <h2>About <span>Me</span></h2>
+        <h4>Professional Software Engineer</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ipsa ex blanditiis, velit nam debitis culpa laudantium quos! Vel porro modi commodi exercitationem expedita dolores nesciunt minus necessitatibus accusantium quae debitis rem aperiam nam sint aliquid provident asperiores tempore veniam explicabo nostrum, ducimus laborum maxime dolor. Enim repellendus aut at ab distinctio temporibus, quos quas vel beatae accusantium aspernatur, incidunt cum, libero id quibusdam quo dolores magni nulla? Minima consectetur delectus accusantium nesciunt nobis culpa illum ipsa odit temporibus perspiciatis placeat dolor veniam magni reprehenderit, facere enim inventore cum officiis, esse nostrum. Velit nisi vel beatae provident, distinctio odit neque.</p>
+
+        <a href="" class="btn-box" id="AboutBtn">More About me</a>
+      </div>
+    </section>
+
     <!-- Javascript link -->
     <script src="main.js"></script>
   </body>
